SLING-7162 - Update SCM information in all POM files to reference Git

--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
     </description>
 
     <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/sling/contrib/extensions/cache/impl</connection>
-        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/sling/contrib/extensions/cache/impl</developerConnection>
-        <url>http://svn.apache.org/viewvc/sling/contrib/extensions/cache/impl</url>
+        <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</conncetion>
+        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</developerConnection>
+        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-cache-impl.git</url>
     </scm>
     
 
