Fix build issues and update to sling 47

--- a/pom.xml
+++ b/pom.xml
@@ -22,26 +22,31 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.apache.sling</groupId>
-        <artifactId>sling</artifactId>
-        <version>16</version>
-        <relativePath/>
+        <artifactId>sling-bundle-parent</artifactId>
+        <version>47</version>
+        <relativePath />
     </parent>
 
     <artifactId>org.apache.sling.commons.cache.impl</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
 
     <name>Apache Sling Cache API Implementation support library</name>
     <description>
         This bundle provides an implementation support for Cache implementations. It is a utility jar that should be embedded.
     </description>
 
+    <properties>
+        <sling.java.version>8</sling.java.version>
+        <project.build.outputTimestamp>1</project.build.outputTimestamp>
+        <bnd.baseline.skip>true</bnd.baseline.skip>
+    </properties>
+
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-cache-impl.git</url>
+        <tag>HEAD</tag>
     </scm>
-    
 
     <dependencies>
         <dependency>
