SLING-12094 - Use GitHub for the Maven scm.url value

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-commons-cache-impl.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-commons-cache-impl.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-commons-cache-impl.git</url>
         <tag>HEAD</tag>
     </scm>
 
